@@ -8,6 +8,7 @@ NEW IN WAF 1.7.11
 * QtDesigner library detection #1315
 * Redundant check_dir call causing random uninstall failures #1313
 * Append to moc flags instead of replacing them #1317
+* Share moc tasks in the Qt processing #1318
 
 NEW IN WAF 1.7.10
 -----------------
